--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CA ChatBot</title>
-    <link rel="stylesheet" href="static/styles.css">
+    <link rel="stylesheet" href="styles.css">
     
 </head>
 <body>
@@ -19,6 +19,6 @@
             <button id="send">Send</button>
         </div>
     </div>
-    <script src="static/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
