--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="static/logo.png" alt="Computer Association Logo" class="logo">
+            <img src="logo.png" alt="Computer Association Logo" class="logo">
             <h1>CA ChatBot</h1>
         </header>
         <div id="chat" class="imessage"></div>
