--- a/static/index.html
+++ b/static/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CA ChatBot</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="static/styles.css">
     
 </head>
 <body>
     <div class="container">
         <header>
-            <img src="logo.png" alt="Computer Association Logo" class="logo">
+            <img src="static/logo.png" alt="Computer Association Logo" class="logo">
             <h1>CA ChatBot</h1>
         </header>
         <div id="chat" class="imessage"></div>
@@ -19,6 +19,6 @@
             <button id="send">Send</button>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="static/script.js"></script>
 </body>
 </html>
